RDLC and UI Enhancement

--- a/pgso.csproj
+++ b/pgso.csproj
@@ -341,7 +341,6 @@
     <Compile Include="frm_Venues.Designer.cs">
       <DependentUpon>frm_Venues.cs</DependentUpon>
     </Compile>
-
     <Compile Include="pgso_Billing\User Control\Equipment_User_Control.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -444,8 +443,6 @@
     <EmbeddedResource Include="frm_Venues.resx">
       <DependentUpon>frm_Venues.cs</DependentUpon>
     </EmbeddedResource>
-
-
     <EmbeddedResource Include="pgso_Billing\Forms\frm_Edit_Reservation_Info.resx">
       <DependentUpon>frm_Edit_Reservation_Info.cs</DependentUpon>
     </EmbeddedResource>
@@ -478,24 +475,24 @@
     </EmbeddedResource>
     <EmbeddedResource Include="pgso_Billing\Forms\Report_Billing_Equipment.rdlc" />
     <EmbeddedResource Include="pgso_Billing\Forms\Report_Billing_Venue.rdlc" />
+    <EmbeddedResource Include="pgso_Billing\Forms\FEATURE Report - Copy.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="pgso_Billing\User Control\Equipment_User_Control.resx">
       <DependentUpon>Equipment_User_Control.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pgso_Billing\User Control\Venue_User_Control.resx">
       <DependentUpon>Venue_User_Control.cs</DependentUpon>
     </EmbeddedResource>
-
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-
     <EmbeddedResource Include="UserControlDaysEquipment.resx">
       <DependentUpon>UserControlDaysEquipment.cs</DependentUpon>
     </EmbeddedResource>
