--- a/pgso.csproj
+++ b/pgso.csproj
@@ -311,18 +311,6 @@
     <Compile Include="frm_Equipment.Designer.cs">
       <DependentUpon>frm_Equipment.cs</DependentUpon>
     </Compile>
-    <Compile Include="frm_Equipment_Calendar.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frm_Equipment_Calendar.Designer.cs">
-      <DependentUpon>frm_Equipment_Calendar.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frm_Equipment_Res.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frm_Equipment_Res.Designer.cs">
-      <DependentUpon>frm_Equipment_Res.cs</DependentUpon>
-    </Compile>
     <Compile Include="frm_ReservationDetails.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -371,31 +359,23 @@
     <Compile Include="frm_Print_Reservation.Designer.cs">
       <DependentUpon>frm_Print_Reservation.cs</DependentUpon>
     </Compile>
-    <Compile Include="frm_Res_Calendar.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frm_Res_Calendar.Designer.cs">
-      <DependentUpon>frm_Res_Calendar.cs</DependentUpon>
-    </Compile>
     <Compile Include="frm_Venues.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frm_Venues.Designer.cs">
       <DependentUpon>frm_Venues.cs</DependentUpon>
     </Compile>
-
-    <Compile Include="frm_Venue_Calendar.cs">
-      <SubType>Form</SubType>
+    <Compile Include="pgso_Billing\User Control\Equipment_User_Control.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="frm_Venue_Calendar.Designer.cs">
-      <DependentUpon>frm_Venue_Calendar.cs</DependentUpon>
+    <Compile Include="pgso_Billing\User Control\Equipment_User_Control.Designer.cs">
+      <DependentUpon>Equipment_User_Control.cs</DependentUpon>
     </Compile>
-    <Compile Include="frm_Venue_Res.cs">
-      <SubType>Form</SubType>
+    <Compile Include="pgso_Billing\User Control\Venue_User_Control.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="frm_Venue_Res.Designer.cs">
-      <DependentUpon>frm_Venue_Res.cs</DependentUpon>
-
+    <Compile Include="pgso_Billing\User Control\Venue_User_Control.Designer.cs">
+      <DependentUpon>Venue_User_Control.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -459,12 +439,6 @@
     <EmbeddedResource Include="frm_Equipment.resx">
       <DependentUpon>frm_Equipment.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frm_Equipment_Calendar.resx">
-      <DependentUpon>frm_Equipment_Calendar.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frm_Equipment_Res.resx">
-      <DependentUpon>frm_Equipment_Res.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="frm_ReservationDetails.resx">
       <DependentUpon>frm_ReservationDetails.cs</DependentUpon>
     </EmbeddedResource>
@@ -490,19 +464,67 @@
     <EmbeddedResource Include="frm_Print_Reservation.resx">
       <DependentUpon>frm_Print_Reservation.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frm_Res_Calendar.resx">
-      <DependentUpon>frm_Res_Calendar.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="frm_Venues.resx">
       <DependentUpon>frm_Venues.cs</DependentUpon>
     </EmbeddedResource>
-
-    <EmbeddedResource Include="frm_Venue_Calendar.resx">
-      <DependentUpon>frm_Venue_Calendar.cs</DependentUpon>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Cancellation_Reason.resx">
+      <DependentUpon>frm_Cancellation_Reason.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frm_Venue_Res.resx">
-      <DependentUpon>frm_Venue_Res.cs</DependentUpon>
-
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Cancellation_Slip.resx">
+      <DependentUpon>frm_Cancellation_Slip.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Edit_Reservation_Info.resx">
+      <DependentUpon>frm_Edit_Reservation_Info.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Equipment_Returns.resx">
+      <DependentUpon>frm_Equipment_Returns.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Extend_Equipment.resx">
+      <DependentUpon>frm_Extend_Equipment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Extend_Venue.resx">
+      <DependentUpon>frm_Extend_Venue.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Extension_Slip.resx">
+      <DependentUpon>frm_Extension_Slip.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_OR.resx">
+      <DependentUpon>frm_OR.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Report_Billing_Equipment.resx">
+      <DependentUpon>frm_Report_Billing_Equipment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Report_Billing_Main.resx">
+      <DependentUpon>frm_Report_Billing_Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Print_Billing.resx">
+      <DependentUpon>frm_Print_Billing.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Report_Billing_Venue.resx">
+      <DependentUpon>frm_Report_Billing_Venue.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Report_Billing_Venue_And_Equipment.resx">
+      <DependentUpon>frm_Report_Billing_Venue_And_Equipment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\frm_Return_Slip.resx">
+      <DependentUpon>frm_Return_Slip.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\Report_Billing_Equipment.rdlc" />
+    <EmbeddedResource Include="pgso_Billing\Forms\Report_Billing_Venue.rdlc" />
+    <EmbeddedResource Include="pgso_Billing\Forms\Report_Extension_Slip.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\Report_Cancellation_Slip.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\Forms\Report_Return_Slip.rdlc">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\User Control\Equipment_User_Control.resx">
+      <DependentUpon>Equipment_User_Control.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pgso_Billing\User Control\Venue_User_Control.resx">
+      <DependentUpon>Venue_User_Control.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -586,17 +608,30 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-
-    <COMReference Include="WIA">
-      <Guid>{94A0E92D-43C0-494E-AC29-FD45948A5221}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-    </COMReference>
-
+    <Content Include="ILLink\ILLink.Descriptors.LibraryBuild.xml" />
+    <None Include="pgso_Billing\Image Asset\print.png" />
+    <None Include="pgso_Billing\Image Asset\Cancelled_Icon.png" />
+    <None Include="pgso_Billing\Image Asset\Approved_Icon.png" />
+    <None Include="pgso_Billing\Image Asset\Extend_Icon.png" />
+    <Content Include="SqlServerTypes\readme.htm" />
+    <Content Include="SqlServerTypes\x64\msvcr120.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x64\SqlServerSpatial140.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x86\msvcr120.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x86\SqlServerSpatial140.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="pgso_Billing\Queries\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\System.ValueTuple.4.6.1\build\net471\System.ValueTuple.targets" Condition="Exists('packages\System.ValueTuple.4.6.1\build\net471\System.ValueTuple.targets')" />
