--- a/App.config
+++ b/App.config
@@ -1,10 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="pgso.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS_EXPERIMENT_3.0;Integrated Security=True;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
-        <add name="pgso.Properties.Settings.BRIS_EXPERIMENT_3_0ConnectionString" connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS_EXPERIMENT_3.0;User ID=sa;Password=abz123;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS_EXPERIMENT_3.0;User ID=sa;Password=abz123;Encrypt=False;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+        <add name="pgso.Properties.Settings.BRIS_EXPERIMENT_3_0ConnectionString"
+            connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS_EXPERIMENT_3.0;User ID=sa;Password=abz123;Encrypt=False;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
@@ -37,4 +43,32 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <pgso.Properties.Settings>
+      <setting name="Savedusername" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Saveusertype" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="RememberMe" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="remember" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="RememberedUsername" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="RememberedUsertype" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="RememberMeChecked" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="setting" serializeAs="String">
+        <value />
+      </setting>
+    </pgso.Properties.Settings>
+  </userSettings>
 </configuration>
