--- a/packages.config
+++ b/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net481" />
   <package id="itext" version="9.1.0" targetFramework="net472" />
   <package id="itext.commons" version="9.1.0" targetFramework="net472" />
   <package id="itext7" version="9.1.0" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.4" targetFramework="net481" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.3" targetFramework="net481" />
   <package id="Microsoft.Extensions.DependencyInjection" version="9.0.3" targetFramework="net481" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.3" targetFramework="net481" />
