--- a/pgso.csproj
+++ b/pgso.csproj
@@ -42,6 +42,9 @@
     </StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BouncyCastle.Cryptography, Version=2.0.0.0, Culture=neutral, PublicKeyToken=072edcf4a5328938, processorArchitecture=MSIL">
+      <HintPath>packages\BouncyCastle.Cryptography.2.4.0\lib\net461\BouncyCastle.Cryptography.dll</HintPath>
+    </Reference>
     <Reference Include="Interop.WIA">
       <HintPath>obj\Debug\Interop.WIA.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
@@ -81,6 +84,9 @@
     </Reference>
     <Reference Include="itext.svg, Version=9.1.0.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <HintPath>packages\itext.9.1.0\lib\net461\itext.svg.dll</HintPath>
+    </Reference>
+    <Reference Include="itextsharp, Version=5.5.13.4, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>packages\iTextSharp.5.5.13.4\lib\net461\itextsharp.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=9.0.0.3, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.Bcl.AsyncInterfaces.9.0.3\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
@@ -169,17 +175,42 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="Class_Pdf_Generator.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_Client_Info.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_Client_Info.Designer.cs">
+      <DependentUpon>frm_Client_Info.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_Equipment_Edit.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frm_Equipment_Edit.Designer.cs">
       <DependentUpon>frm_Equipment_Edit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_login.Designer.cs">
+      <DependentUpon>frm_login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_Logs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_Logs.Designer.cs">
+      <DependentUpon>frm_Logs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_Manage_Equipment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_Manage_Equipment.Designer.cs">
+      <DependentUpon>frm_Manage_Equipment.cs</DependentUpon>
     </Compile>
     <Compile Include="frm_Res_Calendar.cs">
       <SubType>Form</SubType>
@@ -438,8 +469,20 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>_BRIS_EXPERIMENT_3_0DataSet.xsd</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frm_Client_Info.resx">
+      <DependentUpon>frm_Client_Info.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm_Equipment_Edit.resx">
       <DependentUpon>frm_Equipment_Edit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_Login.resx">
+      <DependentUpon>frm_login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_Logs.resx">
+      <DependentUpon>frm_Logs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_Manage_Equipment.resx">
+      <DependentUpon>frm_Manage_Equipment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_Res_Calendar.resx">
       <DependentUpon>frm_Res_Calendar.cs</DependentUpon>
@@ -1102,6 +1145,17 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="pgso_Billing\Queries\" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="WIA">
+      <Guid>{94A0E92D-43C0-494E-AC29-FD45948A5221}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\System.ValueTuple.4.6.1\build\net471\System.ValueTuple.targets" Condition="Exists('packages\System.ValueTuple.4.6.1\build\net471\System.ValueTuple.targets')" />
