--- a/App.config
+++ b/App.config
@@ -6,8 +6,11 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS_EXPERIMENT_3.0;Integrated Security=True;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
-        <add name="pgso.Properties.Settings.BRIS_EXPERIMENT_3_0ConnectionString" connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS_EXPERIMENT_3.0;User ID=sa;Password=abz123;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS_EXPERIMENT_3.0;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+        <add name="pgso.Properties.Settings.BRIS_EXPERIMENT_3_0ConnectionString"
+            connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS_EXPERIMENT_3.0;User ID=sa;Password=abz123;Encrypt=False;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
@@ -45,7 +48,7 @@
       <setting name="Savedusername" serializeAs="String">
         <value />
       </setting>
-      <setting name="Saveusertype" serializeAs="String">
+      <setting name="Savedusertype" serializeAs="String">
         <value />
       </setting>
       <setting name="RememberMe" serializeAs="String">
@@ -62,6 +65,9 @@
       </setting>
       <setting name="RememberMeChecked" serializeAs="String">
         <value>False</value>
+      </setting>
+      <setting name="Saveusertype" serializeAs="String">
+        <value />
       </setting>
       <setting name="setting" serializeAs="String">
         <value />
