--- a/App.config
+++ b/App.config
@@ -6,7 +6,7 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS_EXPERIMENT_3.0;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
+        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=DESKTOP-DG6NT1C;Initial Catalog=gso;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
         <add name="pgso.Properties.Settings.BRIS_EXPERIMENT_3_0ConnectionString"
             connectionString="Data Source=KIMABZ\SQL;Initial Catalog=BRIS_EXPERIMENT_3.0;User ID=sa;Password=abz123;Encrypt=False;TrustServerCertificate=True"
