--- a/pgso.csproj
+++ b/pgso.csproj
@@ -328,12 +328,6 @@
     <Compile Include="pgso_Billing\Forms\frm_Report_Billing_Main.Designer.cs">
       <DependentUpon>frm_Report_Billing_Main.cs</DependentUpon>
     </Compile>
-    <Compile Include="pgso_Billing\Forms\frm_Details_Billing.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="pgso_Billing\Forms\frm_Details_Billing.Designer.cs">
-      <DependentUpon>frm_Details_Billing.cs</DependentUpon>
-    </Compile>
     <Compile Include="pgso_Billing\Forms\frm_Print_Billing.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -529,6 +523,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="pgso_Billing\Forms\frm_Add_Equipment_Billing.resx">
       <DependentUpon>frm_Add_Equipment_Billing.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="pgso_Billing\Forms\frm_Billing.resx">
       <DependentUpon>frm_Billing.cs</DependentUpon>
